<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dear Future Self,</string>
    <string name="app_name_shorter">Dear Future,</string>
    <string name="hint_destination">Destination</string>
    <string name="hint_subject">Message</string>
    <string name="hint_body">Details</string>
    <string name="send">Send</string>
    <string name="time_checkbox">When</string>
    <string name="destination_name">Destination name</string>
    <string name="where">Where</string>
    <string name="notification_message_arrived">Your message has arrived</string>
    <string name="edit_message">Edit Message</string>
    <string name="edit_message_condensed">Edit</string>
    <string name="new_message">New Message</string>
    <string name="new_message_condensed">New</string>
    <string name="sent_x">Sent %1$s</string>
    <string name="notification_messages_have_arrived">Messages have arrived</string>
    <string name="notification_messages_plus_n_more">+%1$d more</string>
    <string name="you_have_x_new_messages">You have %1$d new messages from yourself.</string>
    <string name="message_from_your_past">Message from your past</string>
    <string name="message_list_empty">You have no messages. What would you tell your tomorrow self?</string>
    <string name="export_messages">Export</string>
    <string name="import_messages">Import</string>
    <string name="import_export">Import/Export</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="share_message">Share Message</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="permission_read_dear_future_self_messages_label">Read Dear Future Self messages</string>
    <string name="permission_read_dear_future_self_messages_description">Allows app to read Dear Future Self messages</string>
    <string name="permission_write_dear_future_self_messages_label">Modify Dear Future Self messages</string>
    <string name="permission_write_dear_future_self_messages_description">Allows app to create, modify, and delete Dear Future Self messages</string>

    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="shortcut_title_new_message">New message to self</string>
    <string name="search_hint">Search messages</string>
    <string name="message_list_empty_search">No messages match your search.</string>
    <string name="search_settings_description">Messages received from yourself</string>
    
</resources>
