<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_act_add"
        android:showAsAction="always|withText"
        android:title="@string/new_message"
        android:titleCondensed="@string/new_message_condensed"/>
    <item
        android:id="@+id/search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/abs__ic_search"
        android:showAsAction="ifRoom"
        android:title="@android:string/search_go"/>
    <item
        android:id="@+id/import_export"
        android:icon="@android:drawable/ic_menu_upload"
        android:showAsAction="withText|ifRoom"
        android:title="@string/import_export"/>

</menu>