<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination_name" />

        <CheckBox
            android:id="@+id/timeline_enable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_checkbox" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" >
        </TextView>

        <info.staticfree.android.dearfutureself.TimelineEntry
            android:id="@+id/timeline"
            android:layout_width="fill_parent"
            android:layout_height="70dip"
            android:background="@drawable/timeline_background" />

        <CheckBox
            android:id="@+id/where_enable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/where" />

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="100dip" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CheckBox" >
        </CheckBox>
    </LinearLayout>

</ScrollView>